@@ -56,23 +56,16 @@ Pop3::Pop3 (const Mailbox &other) : Pop (other)
 
 Pop3::~Pop3 (void)
 {
-	delete socket_;
 }
-
 
 
 // ========================================================================
 //  main
 // ========================================================================	
-int
-Pop3::connect (void)
+void 
+Pop3::connect (void) throw (pop_err)
 {
-	// Is there a password? Can we obtain it?
-	if (!biff_->password(this)) {
-		status_ = MAILBOX_ERROR;
-		g_warning (_("[%d] Empty password"), uin_);
-		return 0;
-	}
+	std::string line;
 
 	// Check standard port
 	if (!use_other_port_)
@@ -81,52 +74,22 @@ Pop3::connect (void)
 		else
 			port_ = 995;
 
-	// connection
-	if (authentication_ == AUTH_AUTODETECT) {
-		guint port = port_;
-		if (!use_other_port_)
-			port = 995;
-		if (!socket_->open (address_, port, AUTH_SSL)) {
-			if (!use_other_port_)
-				port = 110;
-			if (!socket_->open (address_, port, AUTH_USER_PASS)) {
-				status_ = MAILBOX_ERROR;
-				return 0;
-			}
-			else {
-				port_ = port;
-				authentication_ = AUTH_USER_PASS;
-				socket_->close();
-			}
-		}
-		else {
-			port_ = port;
-			authentication_ = AUTH_SSL;
-			socket_->close();
-		}
-	}
+	// Open the socket
+	Pop::connect ();
 
-	if (!socket_->open (address_, port_, authentication_, certificate_, 3)) {
-		status_ = MAILBOX_ERROR;
-		return 0;
-	}
-
-	std::string line;
 	readline (line); // +OK response
 
-	// LOGIN : username
+	// LOGIN: username
 	sendline ("USER " + username_);
 	readline (line); // +OK response
 
-	// LOGIN : password
+	// LOGIN: password
+	sendline ("PASS " + password_, false);
+	readline (line); // +OK response
 #ifdef DEBUG
 	// Just in case someone sends me the output: password won't be displayed
 	std::string line_no_password = "PASS (hidden)\r\n";
 	g_message ("[%d] SEND(%s:%d): %s", uin_, address_.c_str(), port_,
 			   line_no_password.c_str());
 #endif
-	sendline ("PASS " + password_, false);
-	readline (line); // +OK response
-
-	return 1;
 }
