@@ -50,7 +50,7 @@ public:
 	// ========================================================================
 	//  main
 	// ========================================================================	
-	int connect (void);
+	void connect (void) throw (pop_err);
 };
 
 #endif
